<resources>
    <string name="app_name">CoBookE</string>

    <!-- Action Bar Label -->
    <string name="action_course">코스</string>
    <string name="action_search">검색</string>
    <string name="action_setting">설정</string>
    <string name="action_license">오픈소스 라이센스</string>

    <!-- Menu -->
    <string name="menu_overflow">Over Flow</string>
    <string name="menu_help">사용방법</string>
    <string name="menu_setting">설정하기</string>
    <string name="menu_change_grid">그리드 변경</string>
    <string name="menu_sort">정렬하기</string>
    <string name="menu_merge_word">공통단어 뽑기</string>
    <string name="menu_share">공유하기</string>
    <string name="menu_search">검색하기</string>
    <string name="menu_delete">삭제하기</string>
    <string name="menu_move">이동하기</string>
    <string name="menu_save">저장하기</string>

    <!-- UI -->
    <string name="string_start">시작하기</string>
    <string name="string_course">코스</string>
    <string name="string_item">항목</string>
    <string name="string_title">제목</string>
    <string name="string_desc">설명</string>
    <string name="string_register">등록</string>
    <string name="string_update">수정</string>
    <string name="string_delete">삭제</string>
    <string name="string_cancel">취소</string>
    <string name="string_copy">복사</string>
    <string name="string_move">이동</string>
    <string name="string_select">선택</string>
    <string name="string_set">설정</string>
    <string name="string_search_word">검색어</string>
    <string name="string_search_engine">검색엔진</string>
    <string name="string_course_info">코스 정보</string>
    <string name="string_section_info">코스 그룹 정보</string>
    <string name="string_section_select">코스 그룹 선택</string>
    <string name="string_item_info">항목 정보</string>
    <string name="string_folder_info">폴더 정보</string>
    <string name="string_folder_select">폴더 선택</string>
    <string name="string_sort_select">정렬 방식 선택</string>
    <string name="string_save">저장</string>
    <string name="string_save_and_run">저장 후 앱실행</string>
    <string name="string_home">Home</string>
    <string name="string_new_folder">새 폴더</string>
    <string name="string_default_title">기본 제목</string>
    <string name="string_default_desc">기본 설명입니다.</string>
    <string name="string_select_joint_word">공통 단어 선택</string>

    <string name="hint_course_title">예) 강남역 데이트</string>
    <string name="hint_course_search_word">예) 강남역</string>
    <string name="hint_course_desc">예) 영화보고 갈 만한 곳</string>
    <string name="hint_section_title">예1) 근처 카페, 예2) 식당</string>
    <string name="hint_section_search_word">예1) 11번 출구 카페, 예2) 맛집</string>

    <string name="content_desc_favorite_y">favorite on</string>
    <string name="content_desc_favorite_n">favorite off</string>
    <string name="content_desc_url_preview">URL Preview</string>
    <string name="content_desc_folder">folder Image</string>
    <string name="content_desc_home">home</string>
    <string name="content_desc_up_arrow_enable">up arrow enable</string>
    <string name="content_desc_up_arrow_disable">up arrow disable</string>

    <!-- Message -->
    <string name="msg_insert_new_course">새로운 코스를 등록해보세요!</string>
    <string name="msg_insert_new_course_section">새로운 코스 그룹을 등록해보세요!</string>
    <string name="msg_insert_new_course_section_detail">검색 버튼을 눌러 항목을 추가하세요!</string>
    <string name="msg_insert_new_item">새로운 Bookmark를 등록해보세요!</string>

    <string name="msg_favorite_y">즐겨찾기에 추가되었습니다.</string>
    <string name="msg_favorite_n">즐겨찾기에서 해제되었습니다.</string>
    <string name="msg_save_bookmark">북마크로 저장되었습니다.</string>
    <string name="msg_move_to_web_page">선택한 웹 페이지로 이동합니다.</string>
    <string name="msg_delete">삭제되었습니다.</string>
    <string name="msg_delete_confirm">삭제하시겠습니까?</string>
    <string name="msg_delete_all_confirm">모든 항목을 삭제하시겠습니까?</string>
    <string name="msg_delete_all_complete">모든 항목이 삭제되었습니다.</string>
    <string name="msg_prefix_merge_word">코스 검색어를 [</string>
    <string name="msg_postfix_merge_word">]로 설정하시겠습니까?</string>
    <string name="msg_postfix_merge_word_result">]로 설정하였습니다.</string>
    <string name="msg_no_joint_word">모든 그룹에 공통으로 포함된 검색어가 없습니다.</string>
    <string name="msg_more_than_two_section">코스 그룹이 2개 이상일 때만 가능합니다.</string>
    <string name="msg_license_asset_problem">라이센스 내용을 로딩에 문제가 발생했습니다. 개발자에 문의부탁드립니다.</string>

    <string name="msg_invalid_url_home">적합한 주소가 아니므로 홈페이지로 연결합니다.</string>
    <string name="msg_invalid_url_not_contain_http">웹 주소가 아니므로 저장할 수 없습니다.</string>
    <string name="msg_invalid_url_not_valid">적합한 웹 주소가 아닙니다.</string>
    <string name="msg_impossible_to_save_not_finished_loading">완전히 로딩된 후에 저장할 수 있습니다.</string>
    <string name="msg_prefix_save">[</string>
    <string name="msg_postfix_save">] 폴더로 저장되었습니다.</string>
    <string name="msg_prefix_move_or_copy">[</string>
    <string name="msg_postfix_move_folder">] 폴더로 위치가 변경되었습니다.</string>
    <string name="msg_postfix_copy_folder">] 폴더로 복사하였습니다.</string>
    <string name="msg_postfix_move_section">] 그룹으로 위치가 변경되었습니다.</string>
    <string name="msg_postfix_copy_section">] 그룹으로 복사하였습니다.</string>
    <string name="msg_impossible_to_move_to_child">자신보다 하위 폴더로 이동할 수 없습니다.</string>
    <string name="msg_no_preview_image">대표 이미지가 없습니다.</string>
    <string name="msg_exit_twice">뒤로 버튼을 다시 누르면 종료됩니다.</string>

    <!-- Settings -->
    <string name="settings_category_search">검색</string>
    <string name="settings_category_data">데이터</string>
    <string name="settings_category_etc">기타</string>
    <string name="settings_category_app_info">어플 정보</string>

    <string name="pref_label_home_page">홈 페이지</string>
    <string name="pref_key_home_page" translatable="false">home_page</string>
    <string name="pref_label_home_page_naver">네이버</string>
    <string name="pref_label_home_page_google">구글</string>
    <string name="pref_label_home_page_daum">다음</string>
    <string name="pref_value_home_page_naver">http://m.naver.com</string>
    <string name="pref_value_home_page_google">http://www.google.com</string>
    <string name="pref_value_home_page_daum">http://m.daum.net</string>

    <string name="pref_label_target_of_auto_search">검색 엔진 기본값 (코스 그룹)</string>
    <string name="pref_key_target_of_auto_search" translatable="false">target_of_auto_search</string>
    <string name="pref_label_target_of_auto_search_naver_total">네이버(전체)</string>
    <string name="pref_label_target_of_auto_search_naver_blog">네이버(블로그)</string>
    <string name="pref_label_target_of_auto_search_google">구글</string>
    <string name="pref_label_target_of_auto_search_instagram">인스타그램</string>
    <string name="pref_value_target_of_auto_search_naver_total">https://m.search.naver.com/search.naver?ie=utf8&amp;query=</string>
    <string name="pref_value_target_of_auto_search_naver_blog">https://m.search.naver.com/search.naver?where=m_blog&amp;ie=utf8&amp;query=</string>
    <string name="pref_value_target_of_auto_search_google">https://www.google.com/search?q=</string>
    <string name="pref_value_target_of_auto_search_instagram">https://www.instagram.com/explore/tags/</string>

    <string name="settings_key_delete_all" translatable="false">delete_all</string>
    <string name="settings_title_delete_all">모든 항목 삭제</string>
    <string name="settings_summary_delete_all">저장된 모든 항목을 삭제합니다.</string>
    <string name="settings_key_upload_backup_file" translatable="false">upload_backup_file</string>
    <string name="settings_title_upload_backup_file">백업 내보내기(업데이트 예정)</string>
    <string name="settings_summary_upload_backup_file">저장된 모든 항목을 파일로 저장합니다.</string>
    <string name="settings_key_download_backup_file" translatable="false">download_backup_file</string>
    <string name="settings_title_download_backup_file">백업 가져오기(업데이트 예정)</string>
    <string name="settings_summary_download_backup_file">저장해둔 파일을 앱으로 불러옵니다.</string>

    <string name="pref_label_tab_index">최초 선택 Tab</string>
    <string name="pref_key_tab_index" translatable="false">tab</string>

    <string name="settings_key_delete_with_confirm" translatable="false">delete_with_confirm</string>
    <string name="settings_title_delete_with_confirm">삭제 확인</string>
    <string name="settings_summary_delete_with_confirm">삭제 전에 알림창을 띄웁니다.</string>

    <string name="settings_key_send_mail" translatable="false">send_mail</string>
    <string name="settings_title_send_mail">메일 보내기</string>
    <string name="settings_summary_send_mail">개발자에게 메일을 보냅니다.</string>
    <string name="settings_key_license" translatable="false">license</string>
    <string name="settings_title_license">오픈소스 라이센스</string>
    <string name="settings_summary_license">오픈소스 라이센스 세부정보입니다.</string>
    <string name="settings_developer_mail_address">woojn90@gmail.com</string>
    <string name="settings_developer_mail_subject">[요청] </string>

    <string name="pref_key_item_number_of_grid_column" translatable="false">number_of_column</string>
    <string name="pref_key_zero_means_first_run" translatable="false">first_run</string>
    <string name="pref_key_sort_course" translatable="false">sort_course</string>
    <string name="pref_key_sort_item" translatable="false">sort_item</string>

    <string name="string_sort_abc">가나다 순</string>
    <string name="string_sort_cba">가나다 역순</string>
    <string name="string_sort_latest">최근 저장 순</string>
    <string name="string_sort_earliest">최근 저장 역순</string>

</resources>
