<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:padding="@dimen/margin_basic_of_activity"
    android:stretchColumns="1">
    <TableRow>
        <TextView
            style="@style/TextViewDialog"
            android:id="@+id/tv_course_title"
            android:text="@string/string_title"/>
        <EditText
            style="@style/EditTextDialog"
            android:id="@+id/et_course_title"
            android:layout_marginLeft="@dimen/margin_left_of_edit_text"
            android:layout_marginStart="@dimen/margin_left_of_edit_text"
            android:hint="@string/hint_course_title"/>
    </TableRow>
    <TableRow>
        <TextView
            style="@style/TextViewDialog"
            android:id="@+id/tv_course_search_word"
            android:text="@string/string_search_word"/>
        <EditText
            style="@style/EditTextDialog"
            android:id="@+id/et_course_search_word"
            android:layout_marginLeft="@dimen/margin_left_of_edit_text"
            android:layout_marginStart="@dimen/margin_left_of_edit_text"
            android:hint="@string/hint_course_search_word"/>
    </TableRow>
    <TableRow>
        <TextView
            style="@style/TextViewDialog"
            android:id="@+id/tv_course_desc"
            android:text="@string/string_desc"/>
        <EditText
            style="@style/EditTextDialog"
            android:id="@+id/et_course_desc"
            android:layout_marginLeft="@dimen/margin_left_of_edit_text"
            android:layout_marginStart="@dimen/margin_left_of_edit_text"
            android:hint="@string/hint_course_desc">
        </EditText>
    </TableRow>
</TableLayout>
