<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="280dp"
    android:layout_height="wrap_content"
    android:padding="16dp">
    <TextView
        android:id="@+id/tv_section_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/string_title"/>
    <TextView
        android:id="@+id/tv_section_search_word"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/tv_section_title"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:text="@string/string_search_word"/>
    <EditText
        android:id="@+id/et_section_search_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_toRightOf="@id/tv_section_search_word"
        android:layout_alignBaseline="@id/tv_section_search_word"
        android:hint="@string/hint_section_search_word"/>
    <EditText
        android:id="@+id/et_section_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/tv_section_title"
        android:layout_alignBaseline="@id/tv_section_title"
        android:layout_alignLeft="@id/et_section_search_word"
        android:hint="@string/hint_section_title">
        <requestFocus/>
    </EditText>
</RelativeLayout>
