<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="4dp"
        android:layout_marginStart="4dp"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/layout_course_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="6dp"
            android:gravity="center_vertical"
            android:baselineAligned="false">
            <FrameLayout
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="3dp"
                android:layout_marginBottom="3dp"
                android:layout_marginLeft="2dp"
                android:layout_marginStart="2dp"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp">
                <ImageView
                    android:id="@+id/iv_favorite_y_course"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_ui_favorite_y"
                    android:contentDescription="@string/content_desc_favorite_y"
                    android:visibility="gone"/>
                <ImageView
                    android:id="@+id/iv_favorite_n_course"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/ic_ui_favorite_n"
                    android:contentDescription="@string/content_desc_favorite_n"/>
            </FrameLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        style="@style/TextViewTitle"
                        android:id="@+id/tv_course_title"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:text="Course"/>
                    <TextView
                        style="@style/TextViewSearchWord"
                        android:id="@+id/tv_course_search_word"
                        android:layout_marginLeft="8dp"
                        android:layout_marginStart="8dp"
                        android:textSize="16sp"
                        tools:text="(Search Word)"/>
                </LinearLayout>
                <TextView
                    style="@style/TextViewDesc"
                    android:id="@+id/tv_course_desc"
                    android:textSize="17sp"
                    tools:text="Course Description"/>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_section_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
            <!-- 섹션이 없을 경우 -->
            <TextView
                android:id="@+id/tv_section_empty"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="20sp"
                android:text="@string/msg_insert_new_course_section"
                android:visibility="gone"/>
        </FrameLayout>
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_insert_section"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_gravity="bottom|end"
        android:src="@drawable/ic_fab_add"
        android:scaleType="center"/>

</FrameLayout>




