<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="270dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="@dimen/padding_basic_of_activity"
    android:gravity="center_horizontal">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/colorBackgroundSecond"
        app:cardCornerRadius="5dp"
        app:cardUseCompatPadding="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_basic_of_recycler_view_item">
            <LinearLayout
                android:id="@+id/layout_share"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">
                <TextView
                    style="@style/TextViewTitle"
                    android:id="@+id/tv_share_title"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textSize="16sp"
                    tools:text="Title"/>
                <TextView
                    style="@style/TextViewDesc"
                    android:id="@+id/tv_share_desc"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textSize="14sp"
                    tools:text="Description"/>
                <TextView
                    style="@style/TextViewUrl"
                    android:id="@+id/tv_share_url"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"
                    android:textSize="12sp"
                    tools:text="http://m.naver.com"/>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginTop="5dp">
                    <ImageView
                        android:id="@+id/iv_share_preview"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/content_desc_url_preview"
                        tools:background="@color/cardview_dark_background"/>
                    <ProgressBar
                        style="@android:style/Widget.ProgressBar.Small"
                        android:id="@+id/pg_share_preview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"/>
                </FrameLayout>
            </LinearLayout>

            <ProgressBar
                style="@android:style/Widget.ProgressBar.Small"
                android:id="@+id/pg_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>
        </FrameLayout>
    </android.support.v7.widget.CardView>

    <Spinner
        android:id="@+id/sp_share_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btn_share_save"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"
            android:layout_marginRight="18dp"
            android:layout_marginEnd="18dp"
            android:text="@string/string_save"
            android:textColor="@color/colorAccent"/>
        <Button
            style="?android:attr/borderlessButtonStyle"
            android:id="@+id/btn_share_save_and_run"
            android:layout_width="0dp"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:text="@string/string_save_and_run"
            android:textColor="@color/colorAccent"/>
    </LinearLayout>

</LinearLayout>